--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: ms-e-g's homepage
-description: 
+description: This site contains resources and content for EDUC7642
